--- a/views/SpeedTest.html
+++ b/views/SpeedTest.html
@@ -45,38 +45,37 @@
     <script>
       const abortController = new AbortController()
       const { signal } = abortController
-      const socket = io('https://s24esnb2.onrender.com/', {
+      const socket = io('http://localhost:3000', {
         query: {
           token: localStorage.getItem('token'),
         },
       })
 
-        const resultsDiv = document.getElementById('testResults');
-        const postResultP = document.getElementById('postResult');
-        const getResultP = document.getElementById('getResult');
-        const durationInput = document.getElementById('duration');
-        const intervalInput = document.getElementById('interval');
+      const resultsDiv = document.getElementById('testResults')
+      const postResultP = document.getElementById('postResult')
+      const getResultP = document.getElementById('getResult')
+      const durationInput = document.getElementById('duration')
+      const intervalInput = document.getElementById('interval')
 
       document.getElementById('startTest').addEventListener('click', function () {
-
-        resultsDiv.style.display = 'block';
-    postResultP.innerText = 'Speed Test Ongoing, Please Wait...';
-    getResultP.innerText = ''; // Clear this so it doesn't display an outdated status.
+        resultsDiv.style.display = 'block'
+        postResultP.innerText = 'Speed Test Ongoing, Please Wait...'
+        getResultP.innerText = '' // Clear this so it doesn't display an outdated status.
         const duration = parseInt(document.getElementById('duration').value, 10)
         const interval = parseInt(document.getElementById('interval').value, 10)
 
         if (isNaN(duration) || isNaN(interval) || duration <= 0 || interval < 0) {
-                alert('Please enter valid duration and interval values.');
-                return;
-            }
+          alert('Please enter valid duration and interval values.')
+          return
+        }
 
-        resultsDiv.style.display = 'block';
-            postResultP.innerText = 'Speed Test Ongoing, Please Wait...';
-            getResultP.innerText = '';
+        resultsDiv.style.display = 'block'
+        postResultP.innerText = 'Speed Test Ongoing, Please Wait...'
+        getResultP.innerText = ''
 
-            let postCount = 0;
-            let getCount = 0;
-            
+        let postCount = 0
+        let getCount = 0
+
         let isSpeedTestMode = true
 
         const body = {
@@ -85,7 +84,7 @@
         }
         let postInterval = null
         let getInterval = null
-      
+
         const maxPostCount = 1000 // Set the maximum number of posts
         fetch(`speedTest`, {
           method: 'POST',
@@ -106,26 +105,25 @@
             const receiverName = 'public' // Use 'public' to denote public messages
 
             let endTime = startTime + duration * 1000
-            
+
             // let postCount = 0
             let getCount = 0
 
             function updateResults() {
-              postResultP.innerText = `POST Performance: ${postCount / duration} requests/second`;
-                getResultP.innerText = `GET Performance: ${getCount / duration} requests/second`;
-      }
+              postResultP.innerText = `POST Performance: ${postCount / duration} requests/second`
+              getResultP.innerText = `GET Performance: ${getCount / duration} requests/second`
+            }
 
             // Updated function to send POST requests
             function sendPostRequest() {
+              const currentTime = Date.now()
 
-              const currentTime = Date.now();
-
-// Check if current time has exceeded endTime by more than 5 seconds
-if (currentTime > endTime + 5000) {
-    alert('The test duration has exceeded the specified limit by 5 seconds. The test will now stop.');
-    stopTest(); // Assumes stopTest is a function that stops intervals and handles cleanup
-    return; // Exit the function to prevent further execution
-}
+              // Check if current time has exceeded endTime by more than 5 seconds
+              if (currentTime > endTime + 5000) {
+                alert('The test duration has exceeded the specified limit by 5 seconds. The test will now stop.')
+                stopTest() // Assumes stopTest is a function that stops intervals and handles cleanup
+                return // Exit the function to prevent further execution
+              }
 
               if (postCount >= maxPostCount) {
                 alert('Maximum post count reached. Stopping the test.')
@@ -158,14 +156,14 @@ if (currentTime > endTime + 5000) {
 
             // Updated function to send GET requests
             function sendGetRequest() {
-              const currentTime = Date.now();
+              const currentTime = Date.now()
 
-// Check if current time has exceeded endTime by more than 5 seconds
-if (currentTime > endTime + 5000) {
-    alert('The test duration has exceeded the specified limit by 5 seconds. The test will now stop.');
-    stopTest(); // Assumes stopTest is a function that stops intervals and handles cleanup
-    return; // Exit the function to prevent further execution
-}
+              // Check if current time has exceeded endTime by more than 5 seconds
+              if (currentTime > endTime + 5000) {
+                alert('The test duration has exceeded the specified limit by 5 seconds. The test will now stop.')
+                stopTest() // Assumes stopTest is a function that stops intervals and handles cleanup
+                return // Exit the function to prevent further execution
+              }
 
               const getUrl = `/messages/${senderName}/${receiverName}`
 
@@ -186,7 +184,7 @@ if (currentTime > endTime + 5000) {
                   if (Date.now() >= endTime + duration * 1000) {
                     clearInterval(getInterval)
                     document.getElementById('testResults').style.display = 'block'
-                    updateResults();
+                    updateResults()
                   } else {
                     sendGetRequest()
                   }
@@ -204,28 +202,27 @@ if (currentTime > endTime + 5000) {
           if (postInterval) clearInterval(postInterval)
           if (getInterval) clearInterval(getInterval)
           abortController.abort()
-          resultsDiv.style.display = 'block'; // Ensure the results div is visible
-      postResultP.innerText = 'Test Stopped';
-      getResultP.innerText = ''; // Clear the GET result text
+          resultsDiv.style.display = 'block' // Ensure the results div is visible
+          postResultP.innerText = 'Test Stopped'
+          getResultP.innerText = '' // Clear the GET result text
 
-      let isSpeedTestMode = false
+          let isSpeedTestMode = false
 
-const body = {
-  isSpeedTestMode: isSpeedTestMode,
-}
+          const body = {
+            isSpeedTestMode: isSpeedTestMode,
+          }
 
-try {
-  await fetch(`speedTest`, {
-    method: 'POST',
-    headers: {
-      'Content-Type': 'application/json',
-    },
-    body: JSON.stringify(body),
-  })
-} catch (error) {
-  console.error('Error:', error)
-}
-
+          try {
+            await fetch(`speedTest`, {
+              method: 'POST',
+              headers: {
+                'Content-Type': 'application/json',
+              },
+              body: JSON.stringify(body),
+            })
+          } catch (error) {
+            console.error('Error:', error)
+          }
         }
         document.getElementById('stopTest').addEventListener('click', stopTest)
       })
