--- a/views/TrainExercise.css
+++ b/views/TrainExercise.css
@@ -1,4 +1,40 @@
-@import url('common.css');
+body,
+h1,
+h2,
+p {
+  margin: 0;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+
+.app-header {
+  background: #4a4a4a;
+  color: #fff;
+  padding: 0 16px;
+  height: 60px;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  z-index: 10;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.back-link {
+  color: #9dcc7a;
+  position: absolute;
+  left: 16px;
+  font-size: 1.2em;
+  display: flex;
+  align-items: center;
+  height: 100%;
+  text-decoration: none;
+}
+
+.page-title {
+  font-size: 1.6em;
+}
 
 .exercises-container {
   padding-top: 80px;
