--- a/views/ESN Directory.html
+++ b/views/ESN Directory.html
@@ -379,6 +379,12 @@
         <div class="nav-icon">⚙️</div>
         <div class="nav-label">Settings</div>
       </a>
+      <a href="Resources/Resources.html" class="nav-item">
+        <div class="nav-icon">
+          <img src="Resources/handshake-svgrepo-com.svg" alt="Emergency Resources">
+        </div>
+        <div class="nav-label">Resources</div>
+      </a>
     </div>
 
     <div id="status-modal" class="modal">
