--- a/views/Settings.html
+++ b/views/Settings.html
@@ -75,7 +75,7 @@
 <script src="/socket.io/socket.io.js"></script>
 <script>
       document.addEventListener('DOMContentLoaded', function () {
-        const socket = io('https://s24esnb2.onrender.com/', {
+        const socket = io('http://localhost:3000/', {
           query: {
             token: localStorage.getItem('token'),
           },
