--- a/views/duelGame.html
+++ b/views/duelGame.html
@@ -47,7 +47,7 @@
         justify-content: center;
         font-family: 'Times New Roman', serif;
         font-weight: bold;
-        font-size: 1.2rem;
+        font-size: 1.0rem;
         
     }
     .message {
@@ -99,6 +99,13 @@
         font-weight: bold;
     }
 </style>
+<script src="https://browser.sentry-cdn.com/7.0.0/bundle.min.js" crossorigin="anonymous"></script>
+<script>
+    Sentry.init({
+      dsn: 'https://c7ff13503724cc1a1fbe24d1912d06bf@o4507020676431872.ingest.us.sentry.io/4507020687704064',
+      tracesSampleRate: 1.0
+    });
+</script>
 </head>
 <body>
 <div class="container">
