--- a/views/Settings.html
+++ b/views/Settings.html
@@ -181,7 +181,7 @@
 <script src="Settings.js"></script>
 <script>
       document.addEventListener('DOMContentLoaded', function () {
-        const socket = io('http://localhost:3000', {
+        const socket = io('https://s24esnb2.onrender.com/', {
           query: {
             token: localStorage.getItem('token'),
           },
