fix game lobby css

--- a/views/duelGame.html
+++ b/views/duelGame.html
@@ -48,6 +48,7 @@
         font-family: 'Times New Roman', serif;
         font-weight: bold;
         font-size: 1.0rem;
+        flex-basis: 10vh;
         
     }
     .message {
