--- a/views/Resources/Resources.html
+++ b/views/Resources/Resources.html
@@ -30,7 +30,7 @@
     });
 
     function goBack() {
-  window.history.back();
-}
+        window.location.href = '../ESN Directory.html';
+    }
 </script>
 </html>
