--- a/views/duelGame.html
+++ b/views/duelGame.html
@@ -38,7 +38,7 @@
         background: #fff;
     }
     .opponent {
-        background: #d7f4d8;
+        background: #eff4d7;
         display: flex;
         flex-grow: 1;
         overflow: hidden;
