UI consistency Update

--- a/views/ExerciseDetails.html
+++ b/views/ExerciseDetails.html
@@ -51,6 +51,35 @@
     <footer class="quiz-footer">
       <button id="quizButton" class="quiz-button">Take the Quiz</button>
     </footer>
+
+    <div id="navigation-bar-container">
+      <a href="ESN Directory.html" class="nav-item">
+        <div class="nav-icon">📁</div>
+        <div class="nav-label">Directory</div>
+      </a>
+      <a href="chatroom.html" class="nav-item">
+        <div class="nav-icon">💬</div>
+        <div class="nav-label">Chatroom</div>
+      </a>
+      <a href="Announcement.html" class="nav-item">
+        <div class="nav-icon">📢</div>
+        <div class="nav-label">Announcement</div>
+      </a>
+      <a href="Settings.html" class="nav-item">
+        <div class="nav-icon">⚙️</div>
+        <div class="nav-label">Settings</div>
+      </a>
+      <a href="Resources/Resources.html" class="nav-item">
+        <div class="nav-icon">
+          <img src="Resources/handshake-svgrepo-com.svg" alt="Emergency Resources">
+        </div>
+        <div class="nav-label">Resources</div>
+      <a href="duelLobby.html" class="nav-item" id="enterDuel">
+        <div class="nav-icon">⚔️</div>
+        <div class="nav-label">Duel</div>
+      </a>
+    </div>
+
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
