--- a/views/ExerciseDetails.css
+++ b/views/ExerciseDetails.css
@@ -4,10 +4,21 @@
   margin-bottom: 0;
 }
 
+.back-link {
+  color: black;
+  position: absolute;
+  left: 16px;
+  font-size: 1.2em;
+  display: flex;
+  align-items: center;
+  height: 100%;
+  text-decoration: none;
+}
+
 .main-component {
   margin-top: 50px;
   padding-top: 30px;
-  padding-bottom: 80px;
+  padding-bottom: 180px;
   padding-left: 20px;
   padding-right: 20px;
   background: #f7f7f7;
@@ -32,10 +43,10 @@
 }
 
 .quiz-footer {
-  background: #4a4a4a;
+  background: #89bbf5;
   position: fixed;
   left: 0;
-  bottom: 0;
+  bottom: 80px;
   right: 0;
   padding: 20px;
   z-index: 10;
@@ -45,9 +56,9 @@
 }
 
 .quiz-button {
-  background: #9dcc7a;
-  color: #fff;
-  border: none;
+  background: #fab855;
+  color: black;
+  border-color: black;
   padding: 10px 20px;
   font-size: 1em;
   border-radius: 20px;
@@ -61,10 +72,6 @@
 
 #exerciseTimestamp {
   margin-bottom: 10px;
-}
-
-.quiz-button:hover {
-  background-color: #89b566;
 }
 
 .modal {
@@ -139,17 +146,13 @@
 }
 
 #submitQuiz {
-  background-color: #4caf50;
-  color: white;
+  background-color: #fab855;
+  color: black;
   padding: 10px 20px;
-  border: none;
+  border-color: black;
   border-radius: 5px;
   cursor: pointer;
   font-size: 16px;
-}
-
-#submitQuiz:hover {
-  background-color: #45a049;
 }
 
 #quizResults {
