--- a/views/TrainExercise.css
+++ b/views/TrainExercise.css
@@ -1,8 +1,8 @@
 @import url('common.css');
 
 .exercises-container {
-  padding-top: 80px;
-  padding-bottom: 80px;
+  padding-top: 100px;
+  padding-bottom: 160px;
   padding-left: 20px;
   padding-right: 20px;
   background: #f7f7f7;
@@ -29,10 +29,10 @@
 }
 
 .upload-footer {
-  background: #4a4a4a;
+  background: #89bbf5;
   position: fixed;
   left: 0;
-  bottom: 0;
+  bottom: 80px;
   right: 0;
   padding: 20px;
   z-index: 10;
@@ -42,16 +42,12 @@
 }
 
 .upload-button {
-  background: #9dcc7a;
-  color: #fff;
-  border: none;
+  background: #fab855;
+  color: black;
+  border-color: black;
   padding: 10px 20px;
   font-size: 1em;
   border-radius: 20px;
   cursor: pointer;
   transition: background-color 0.3s ease;
-}
-
-.upload-button:hover {
-  background-color: #89b566;
 }
