--- a/views/UploadExercise.css
+++ b/views/UploadExercise.css
@@ -1,5 +1,5 @@
 html {
-  background-color: darkgray;
+  background-color: #89bbf5;
 }
 
 body {
@@ -49,16 +49,12 @@ input[type='text']:focus {
 
 button {
   padding: 12px 20px;
-  background: #007bff;
-  color: white;
-  border: none;
+  background: #fab855;
+  color: black;
+  border-color: black;
   border-radius: 4px;
   cursor: pointer;
   transition: background 0.3s ease;
-}
-
-button:hover {
-  background: #0056b3;
 }
 
 #cancelBtn {
@@ -91,12 +87,8 @@ button:hover {
 }
 
 #addQuestionBtn {
-  background: #28a745;
+  background: #89bbf5;
   margin-top: 20px;
-}
-
-#addQuestionBtn:hover {
-  background: #218838;
 }
 
 #addQuestionBtn i {
