--- a/views/common.css
+++ b/views/common.css
@@ -7,9 +7,9 @@ p {
 }
 
 .app-header {
-  background: #4a4a4a;
-  color: #fff;
-  padding: 0 16px;
+  background: #89bbf5;
+  color: black;
+  padding: 10px 16px 10px 16px;
   height: 60px;
   position: fixed;
   top: 0;
@@ -21,17 +21,48 @@ p {
   justify-content: center;
 }
 
-.back-link {
-  color: #9dcc7a;
-  position: absolute;
-  left: 16px;
-  font-size: 1.2em;
-  display: flex;
-  align-items: center;
-  height: 100%;
-  text-decoration: none;
-}
-
 .page-title {
   font-size: 1.6em;
+}
+
+#navigation-bar-container a {
+  text-decoration: none; /* Removes underline from links */
+  color: inherit; /* Inherits the text color from the parent */
+}
+
+#navigation-bar-container a:active,
+#navigation-bar-container a:focus,
+#navigation-bar-container a:hover {
+  text-decoration: none; /* Keeps underline removed on hover/focus */
+}
+
+#navigation-bar-container {
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  background-color: #fff;
+  box-shadow: 0 -2px 5px rgba(0, 0, 0, 0.1);
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  padding: 10px 0;
+  box-sizing: border-box;
+  z-index: 1000;
+}
+
+.nav-item {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.nav-icon {
+  font-size: 24px;
+}
+
+.nav-label {
+  font-size: 12px;
+  margin-top: 5px;
 }
