--- a/views/Resources/need-help.html
+++ b/views/Resources/need-help.html
@@ -59,6 +59,29 @@
     </div>    
   </div>
 
+  <div id="navigation-bar-container" style="position: fixed; bottom: 0; width: 100%; background-color: #fff; box-shadow: 0 -2px 5px rgba(0,0,0,0.1);">
+    <a href="../ESN Directory.html" class="nav-item">
+        <div class="nav-icon">📁</div>
+        <div class="nav-label">Directory</div>
+    </a>
+    <a href="../chatroom.html" class="nav-item">
+        <div class="nav-icon">💬</div>
+        <div class="nav-label">Chatroom</div>
+    </a>
+    <a href="../Announcement.html" class="nav-item">
+        <div class="nav-icon">📢</div>
+        <div class="nav-label">Announcement</div>
+    </a>
+    <a href="../Settings.html" class="nav-item">
+        <div class="nav-icon">⚙️</div>
+        <div class="nav-label">Settings</div>
+    </a>
+    <a href="../duelLobby.html" class="nav-item">
+        <div class="nav-icon">⚔️</div>
+        <div class="nav-label">Duel</div>
+    </a>
+</div>
+
   <script src="/socket.io/socket.io.js"></script>
   <script src="NeedHelp.js"></script>
 </body>
