--- a/views/Resources/NeedHelp.css
+++ b/views/Resources/NeedHelp.css
@@ -14,12 +14,12 @@ header {
   width: 100%;
   text-align: center;
   box-shadow: 0 2px 4px rgba(0,0,0,0.1);
-  background: #fff;
+  background: #89bbf5;
   margin-bottom: 15px;
 }
 
 .header-btn {
-  background-color: #e0e0e0;
+  background-color: #89bbf5;
   border: none;
   width: 100%;
   height: 100%;
@@ -33,7 +33,7 @@ header {
 }
 
 .header-btn:hover {
-  background-color: #d0d0d0; 
+  background-color: #89bbf5; 
 }
 
 .container {
@@ -43,7 +43,7 @@ header {
 }
 
 .button {
-  background-color: #80808085;
+  background-color: #89bbf5;
   border: none;
   padding: 15px;
   text-align: center;
@@ -94,7 +94,7 @@ header {
   width: 90%;
   max-width: 500px;
   z-index: 10;
-  background-color: #fff;
+  background-color: #89bbf5;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
   padding: 0 20px; 
   border-radius: 10px;
@@ -124,8 +124,8 @@ header {
 }
 
 .form-group button {
-  background-color: #000;
-  color: #fff;
+  background-color: #fab855;
+  color: black;
   border: none;
 }
 
@@ -138,10 +138,10 @@ header {
   width: 100%;
   padding: 10px;
   margin-top: 20px;
-  background-color: #000;
-  color: #fff;
+  background-color: #fab855;
+  color: black;
   border: none;
-  border-radius: 20px; 
+  border-radius: 20px;
   cursor: pointer;
 }
 
@@ -150,7 +150,7 @@ header {
   display: flex;
   align-items: center;
   justify-content: center;
-  background: #8080808f;
+  background: #eeebeb;
   border: none;
   padding: 0 10px; /* Adjust padding to ensure button content is centered */
   height: 100%; /* Stretch to fill the height of the container */
@@ -159,7 +159,7 @@ header {
 }
 
 .delete-btn .text {
-  color: white;
+  color: black;
   font-weight: bold;
   font-size: 14px; /* Adjusted for readability within notification items */
   margin-right: 5px; /* Space between text and icon */
@@ -174,7 +174,7 @@ header {
 }
 
 .delete-btn svg {
-  fill: #eee;
+  fill: black;
   width: 15px; /* Icon size adjusted for balance */
 }
 
@@ -188,4 +188,36 @@ header {
 
 .delete-btn:active .icon svg {
   transform: scale(0.9); /* Slight shrink effect on click */
+}
+
+#navigation-bar-container {
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  background-color: #fff;
+  box-shadow: 0 -2px 5px rgba(0,0,0,0.1);
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  padding: 10px 0;
+  box-sizing: border-box;
+  z-index: 1000;
+}
+
+.nav-item {
+  text-decoration: none;
+  color: black;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.nav-icon {
+  font-size: 24px;
+}
+
+.nav-label {
+  font-size: 12px;
+  margin-top: 5px;
 }
