--- a/views/Resources/Resources.html
+++ b/views/Resources/Resources.html
@@ -7,9 +7,7 @@
     <link rel="stylesheet" href="Resources.css">
 </head>
 <body>
-    <header>
-        <button onclick="goBack()" class="header-btn">Back</button>
-      </header>
+    <!-- Header removed based on your request -->
     <div class="menu-container">
         <a href="need-help.html" class="menu-item need-help">
             <i class="menu-icon">&#x26D4;</i>
@@ -20,6 +18,29 @@
             <span class="menu-text">I can help</span>
         </a>
     </div>
+    <!-- Navigation bar without the resource link -->
+    <div id="navigation-bar-container" style="position: fixed; bottom: 0; width: 100%; background-color: #fff; box-shadow: 0 -2px 5px rgba(0,0,0,0.1);">
+        <a href="../ESN Directory.html" class="nav-item">
+            <div class="nav-icon">📁</div>
+            <div class="nav-label">Directory</div>
+        </a>
+        <a href="../chatroom.html" class="nav-item">
+            <div class="nav-icon">💬</div>
+            <div class="nav-label">Chatroom</div>
+        </a>
+        <a href="../Announcement.html" class="nav-item">
+            <div class="nav-icon">📢</div>
+            <div class="nav-label">Announcement</div>
+        </a>
+        <a href="../Settings.html" class="nav-item">
+            <div class="nav-icon">⚙️</div>
+            <div class="nav-label">Settings</div>
+        </a>
+        <a href="../duelLobby.html" class="nav-item">
+            <div class="nav-icon">⚔️</div>
+            <div class="nav-label">Duel</div>
+        </a>
+    </div>
 </body>
 <script src="/socket.io/socket.io.js"></script>
 <script>
@@ -28,9 +49,5 @@
             token: localStorage.getItem('token'),
         },
     });
-
-    function goBack() {
-        window.location.href = '../ESN Directory.html';
-    }
 </script>
 </html>
