--- a/views/Resources/Resources.html
+++ b/views/Resources/Resources.html
@@ -44,7 +44,7 @@
 </body>
 <script src="/socket.io/socket.io.js"></script>
 <script>
-    const socket = io('http://localhost:3000', {
+    const socket = io('https://s24esnb2.onrender.com', {
         query: {
             token: localStorage.getItem('token'),
         },
