--- a/views/profile.html
+++ b/views/profile.html
@@ -135,8 +135,13 @@
         </button>
       </div>
     </form>
-
+    <script src="/socket.io/socket.io.js"></script>
     <script>
+      const socket = io('https://s24esnb2.onrender.com', {
+        query: {
+          token: localStorage.getItem('token'),
+        },
+      })
       document.querySelector('button[type="submit"]').style.display = 'none'
       let bannedUsernames = []
       let users = JSON.parse(localStorage.getItem('users'))
